--- a/custom_addons/finance_tracker/wizards/filtered_entries.xml
+++ b/custom_addons/finance_tracker/wizards/filtered_entries.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="finance_report_wizard_form" model="ir.ui.view">
-        <field name="name">finance.report.wizard.form</field>
-        <field name="model">finance.report.wizard</field>
+    <record id="finance_filter_wizard_form" model="ir.ui.view">
+        <field name="name">finance.filter.wizard.form</field>
+        <field name="model">finance.filter.wizard</field>
         <field name="arch" type="xml">
             <form string="Filter Finance Entries">
                 <group>
@@ -18,15 +18,14 @@
         </field>
     </record>
 
-    <record id="finance_report_wizard_action" model="ir.actions.act_window">
+    <record id="finance_filter_wizard_action" model="ir.actions.act_window">
         <field name="name">Filter Finance Entries</field>
-        <field name="res_model">finance.report.wizard</field>
+        <field name="res_model">finance.filter.wizard</field>
         <field name="view_mode">form,tree</field>
         <field name="target">new</field>
     </record>
 
-
     <menuitem id="finance_record_filter" name="Filter Records"
-              action="finance_report_wizard_action"
+              action="finance_filter_wizard_action"
               parent="finance_menu_root"/>
 </odoo>
